  * raggle: used cached results in scroll_down/up; rendering speedup
  * raggle: only clearrange in desc window when necessary, this
    removes flicker

* Mon Sep 15 16:59:40 2003, pabs <pabs@pablotron.org>
  * raggle: make view source toggle work ind escription window as
    well

* Mon Sep 15 17:01:41 2003, pabs <pabs@pablotron.org>
  * raggle: dont' force 1.8 (gotta stop doing that ;))

* Mon Sep 15 17:08:55 2003, pabs <pabs@pablotron.org>
  * raggle: reset desc window offset when selecting new item
  * raggle: remove some older commented cruft

* Mon Sep 15 19:02:56 2003, pabs <pabs@pablotron.org>
  * raggle: added --max-items (max number of items to save per feed), 
    can also be set on a global feed basis with $config['max_feed_items']
  * raggle: added '-A' shortcut for --ascii
  * raggle: fix a bit of evil tabbing again ;)

* Mon Sep 15 20:27:06 2003, pabs <pabs@pablotron.org>
  * raggle: added a bit more info to interrupted message if web server
    is runnign
  * raggle: added quit template to list
  * raggle: added "/raggle/quit" path
  * raggle: reload all button in web interface runs feed thread
  * raggle: save_feed_list restores item list (for web interface)
  * raggle: don't select current window item when running as web
    server
  * raggle: update page refresh to 2 minutes (use javascript to
    force refreshes now)
  * extras/web_ui/titlebar.html: add doctype
  * extras/web_ui/titlebar.html: add quit button
  * extras/web_ui/inc/feed.html: add update and delete buttons
  * extras/web_ui/inc/feed_list.html: refresh feed window when 
    selecting feed as well
  * extras/web_ui/inc/item_list.html: disable meta refresh
  * extras/web_ui/inc/item_list.html: refresh feed window and this
    window when selecting item 
  * added extras/web_ui/inc/quit.html

* Tue Sep 16 15:11:03 2003, pabs <pabs@pablotron.org>
  * raggle: add $ keybinding (jump to last item in window)
  * raggle: add 0 keybinding (jump to first item in window)
