@@ -46,7 +46,7 @@ img.feed-image {
   color: #111111;
   /* letter-spacing: 16px; */
   border-bottom: 1px solid #111111;
-  padding: 5px;
+  padding: 2px;
 
   background-color: #eeeeee;
   background-image: url(/images/feed-title-bg.png);
