@@ -9,12 +9,12 @@
     <meta name='description'    content='Raggle Feed Item Description' />
     <meta name='keywords'       content='rss feed item description' />
 
-    <link title='default' href='/inc/desc.css'
+    <link title='default' href='/inc/default.css'
       rel='stylesheet' type='text/css' />
     <base href='__FEED_SITE__' />
   </head>
 
-  <body bgcolor='#ffffff'>
+  <body class='desc-frame' bgcolor='#ffffff'>
     <div id='desc-header'>
       <div id='desc-title'>__TITLE__</div>
       <div id='desc-nontitle'>
