@@ -4,7 +4,7 @@
 body {
   background-color: #eeeeee;
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 10px;
+  font-size: 12px;
   color: #333333;
   margin-top: 0;
   margin-left: 0;
