@@ -10,7 +10,7 @@
     <meta name='description'    content='Raggle Feed List' />
     <meta name='keywords'       content='rss channels feeds' />
 
-    <link title='default' href='/inc/feed_list.css'
+    <link title='default' href='/inc/default.css'
       rel='stylesheet' type='text/css' />
   </head>
 
@@ -25,7 +25,7 @@
   // -->
   </script>
 
-  <body bgcolor='#ffffff'>
+  <body class='feed-frame' bgcolor='#ffffff'>
     <div id='feed-list-title'>
       __FEED_LIST_TITLE__
     </div>
