@@ -12,7 +12,7 @@
     <meta name='description'    content='Raggle Feed Item List' />
     <meta name='keywords'       content='rss channel feed item' />
 
-    <link title='default' href='/inc/item_list.css'
+    <link title='default' href='/inc/default.css'
       rel='stylesheet' type='text/css' />
   </head>
 
@@ -30,7 +30,7 @@
   // -->
   </script>
 
-  <body bgcolor='#ffffff'>
+  <body class='item-frame' bgcolor='#ffffff'>
     <div id='item-feed-desc'>
       <div id='item-feed-desc-title'>__FEED_TITLE__</div>
       <div id='item-feed-desc-nontitle'>
