@@ -9,7 +9,7 @@
     <meta name='description'    content='Raggle Exit Page' />
     <meta name='keywords'       content='rss channels feeds' />
 
-    <link title='default' href='/inc/done.css'
+    <link title='default' href='/inc/default.css'
       rel='stylesheet' type='text/css' />
   </head>
 
@@ -23,7 +23,7 @@
     // -->
   </script>
 
-  <body bgcolor="#ffffff">
+  <body class='quit' bgcolor="#ffffff">
     <div id='thanks'>
       Thanks for using
       <a href='http://www.raggle.org/'>Raggle</a>
