@@ -108,9 +108,9 @@ ENDERR
 unless $HAVE_LIB['webrick'] || $HAVE_LIB['ncurses']
   $stderr.puts <<-ENDERR
 ERROR: No interfaces available.
-You're missing the both the Ncurses-Ruby and WEBrick modules.  For
-installation instructions, Please see the file README or visit the
-following URL:
+You're missing the both the Ncurses-Ruby and WEBrick modules.  You need
+one or the other in order to run Raggle.  For installation instructions,
+Please see the file README or visit the following URL:
   http://www.raggle.org/docs/install/
 ENDERR
   exit -1
@@ -1850,6 +1850,7 @@ module Raggle
       )
 
       # load templates
+      puts "Loading templates from \"#{$config['web_ui_root_path']}/inc\"."
       @templates = Hash::new
       %w{feed feed_list item item_list desc feed_image quit}.each { |tmpl|
         path = $config['web_ui_root_path'] + "/inc/#{tmpl}.html"
@@ -1862,10 +1863,11 @@ module Raggle
       s.mount('/', WEBrick::HTTPServlet::FileHandler,
               $config['web_ui_root_path'], true)
 
+      # set up quit mount point
       s.mount_proc('/raggle/quit') { |req, res|
         quit_thread = Thread::new {
-          sleep 5;
-          $feed_thread.kill;
+          sleep opts['shutdown_sleep'];
+          $feed_thread.kill if $feed_thread && $feed_thread.alive?
           $http_server.shutdown
         }
 
@@ -3464,11 +3466,12 @@ $config = {
     'bind_address'        => '127.0.0.1', # localhost only
     'port'                => 2222,        # port to bind to
     'page_refresh'        => 120,         # refresh interval (feed & item wins)
+    'shutdown_sleep'      => 2,           # seconds to wait for shutdown
     'empty_item'          => {
       'title'             => '',
       'url'               => '',
       'desc'              => '',
-    }
+    },
     # NOTE:
     # document root is set as $config['web_ui_root_path'], and the
     # access log is set via $config['web_ui_log_path']
